# vc-research

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  build_dmg.sh  install.sh  pyproject.toml
.github/workflows/: test.yml
docs/: api.md  architecture.md  data-audit-2026-04-16.md  data-audit-auto-2026-04-16.md  data-source-spec.md  glossary.md  live-mode-setup.md  quickstart.md  troubleshooting.md
examples/fixtures/: Momenta.json  上海矽睿科技.json  东方算芯.json  先通药业.json  博视像元.json  唯迈医疗.json  商汤科技.json  图灵量子.json  字节跳动.json  小米.json  川土微电子.json  强一股份.json  影石创新.json  德风科技.json  新石器无人车.json  比贝特医药.json  汉朔科技.json  澜起科技.json  瑶芯微电子.json  百济神州.json  糖吉医疗.json  纽瑞芯.json  群核科技.json  艾利特机器人.json  英韧科技.json  蔚来.json  辉羲智能.json  银诺医药.json  阶跃星辰.json
examples/reports/: Momenta.md  商汤科技.md  字节跳动.md  强一股份.md  影石创新.md  必贝特医药.md  比贝特医药.md  汉朔科技.md  澜起科技.md  糖吉医疗.md  艾利特智能机器人.md  蔚来.md  银诺医药.md  阶跃星辰.md
installer/: README.txt  create_app.sh  一键修复并启动.command  修复桌面App.command  安装 VC Research.command  安装指南.md  完整安装(首次).command  快速安装(已有依赖).command
src/vc_research/: __init__.py  cli.py  history.py  schema.py  utils.py
src/vc_research/data_sources/: __init__.py  aggregator.py  base.py  crunchbase_source.py  fixtures_source.py  hkex_source.py  itjuzi_source.py  ollama_researcher.py  sec_edgar_source.py  web_verifier.py
src/vc_research/education/: __init__.py  analogy_teacher.py  quest_unlock.py
tests/: test_edge_cases.py  test_history.py  test_hkex.py  test_sec_edgar.py  test_smoke.py  test_web_verifier.py
tools/: cross_verify.py
web/: dashboard.py
(+24 files in other folders)
