[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vc-research"
version = "0.1.12"
description = "创投企业投资分析系统 — 输入企业名,输出投研报告"
requires-python = ">=3.10"
authors = [{name = "xinmao", email = "xinmao2030@gmail.com"}]
dependencies = [
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "jinja2>=3.1",
    "markdown>=3.5",
    "weasyprint>=60.0",
    "rich>=13.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
vc-research = "vc_research.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
